# ginseng

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.status  configure  configure.ac  script.sh
.travis.scripts/: travis-install.sh
R/: swap-animate.R  swap-results.R
src/: BEDIntervals.cpp  BEDIntervals.h  Events.cpp  Events.h  FishHookInterval.cpp  FishHookInterval.h  FishModel.cpp  FishModel.h  Fractions.cpp  Fractions.h  Histogram.cpp  Histogram.h  Makefile  Makefile.am  Makefile.in  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Squares.cpp  Squares.h  bmp.h  fishhook.cpp  fishhook.h  ginseng.cpp  prng_engine.hpp  sim.cpp  sim.h  swap.cpp  swap.h
src/old/: GenomicRegion.cpp  GenomicRegion.h  GenomicRegionVector.cpp  GenomicRegionVector.h  SnowUtils.cpp  SnowUtils.h
